--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,7 +4,12 @@ production:
   url: redis://localhost:6379/1
 
 development:
-  adapter: async
+  adapter: redis
+  url: redis:/localhost:6379
+  host: localhost
+  port: 6379
+  timeout: 1
+  inline: true
 
 test:
   adapter: async
